--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
 <body>
     <ul class="navbar">
         <li><a href="index.html">Home</a></li>
-        <li><a href="photo.html" class="active">Photo</a></li>
-        <li style="float: right;"><a href="about.html">About</a></li>
+        <li><a href="photo.html" >Photo</a></li>
+        <li style="float: right;"><a href="about.html" class="active">About</a></li>
     </ul>
-    <p>I didn't have time to finish, Insert a photo with your mind</p>
+    <p>I didn't have time to finish, Insert an about page with your mind</p>
 </body>
 </html>
