--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <body>
         <ul class="navbar">
             <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="photo.html">Photo</a></li>
+            <li style="float: right;"><a href="about.html">About</a></li>
         </ul>
 
         <h1>My Favorite Things About School</h1>
